--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,17 +29,17 @@ jobs:
       id: get_last_tag
       run: |
         git fetch --tags
-        TAG=$(git tag --list 'v*' --sort=-v:refname | head -n 1)
-        echo "LAST_TAG=$TAG" >> $GITHUB_ENV
+        TAG=$(git tag --list 'v*.*.0' --sort=-v:refname | head -n 1)
         if [ -z "$TAG" ]; then
           X=0
           Y=0
         else
-          X=$(echo $TAG | sed -E 's/v([0-9]+)\.([0-9]+)/\1/')
-          Y=$(echo $TAG | sed -E 's/v([0-9]+)\.([0-9]+)/\2/')
+          X=$(echo $TAG | sed -E 's/v([0-9]+)\.([0-9]+)\.0/\1/')
+          Y=$(echo $TAG | sed -E 's/v([0-9]+)\.([0-9]+)\.0/\2/')
         fi
         Y=$((Y+1))
-        echo "NEXT_TAG=v${X}.${Y}.0" >> $GITHUB_ENV
+        NEXT_TAG="v${X}.${Y}.0"
+        echo "NEXT_TAG=$NEXT_TAG" >> $GITHUB_ENV
 
     - name: Create and push tag
       env:
